# ai-platform-poc

./: .editorconfig  .gitattributes  .gitignore  README.md  command.json  command.resolved.json  command.resolved.txt  command.txt
.ai_chat_util/: langgraph_checkpoints.sqlite
06-cline-executor/: Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  tmp.txt
06-cline-executor/src/ai_platform_cline_executor/: api_server.py  api_server_org.py  client.py  client2.py
06-cline-executor/src/ai_platform_cline_executor/api/: main.py
06-cline-executor/src/ai_platform_cline_executor/cli/: main.py
06-cline-executor/src/ai_platform_cline_executor/core/: runner.py  utils.py
06-cline-executor/src/ai_platform_docker_executor/: client2.py
06-cline-executor/src/ai_platform_docker_executor/core/: model.py
4_application/: docker-compose.yml  langgraph_state.db  langgraph_state.db-shm  langgraph_state.db-wal  pyproject.toml
4_application/src/ai_platform_app/: api_server.py  async_api_server.py  test_async_client.py  test_langgraph_hitl.py  test_langgraph_hitl_client.py
app/ai-platform-samplelib/: .dockerignore  pyproject.toml
app/ai-platform-samplelib/src/ai_platform_samplelib/ai_assurance/litelllm/test_server/: mcp_server.py
app/ai-platform-samplelib/src/ai_platform_samplelib/application/autonomous/_api_/: api_server.py
app/ai-platform-samplelib/src/ai_platform_samplelib/application/autonomous/_cli_/: docker_main.py  typer_actions.py
app/ai-platform-samplelib/src/ai_platform_samplelib/application/autonomous/_test_/: __init__.py  mcp_client.py
app/ai-platform-samplelib/src/ai_platform_samplelib/application/autonomous/api/: __init__.py  api_server.py  models.py
app/ai-platform-samplelib/src/ai_platform_samplelib/application/autonomous/cli/: docker_main.py  main.py  typer_actions.py
app/ai-platform-samplelib/src/ai_platform_samplelib/application/autonomous/core/: abstract_actions.py  abstract_agent_runner.py  abstract_task_service.py  coding_agent_runner.py  docker_coding_agent_runner.py  docker_task_service.py  endopoint.py  runner.py  subprocess_coding_agent_runner.py  subprocess_task_service.py  task_manager.py  task_service.py  task_service_factory.py  utils.py
app/ai-platform-samplelib/src/ai_platform_samplelib/application/autonomous/mcp/: mcp_server.py
app/ai-platform-samplelib/src/ai_platform_samplelib/application/autonomous/model/: models.py
app/ai-platform-samplelib/src/ai_platform_samplelib/application/autonomous/test_client/: client2.py
app/ai-platform-samplelib/src/ai_platform_samplelib/application/common/: request_headers.py
app/ai-platform-samplelib/src/ai_platform_samplelib/application/super_visor/api/: api_server.py  async_hitl_api_server.py
app/ai-platform-samplelib/src/ai_platform_samplelib/application/super_visor/cli/: main.py
app/ai-platform-samplelib/src/ai_platform_samplelib/application/super_visor/core/: agent.py  autonomous_executor_api_client.py  hitl_core.py  hitl_utils.py  mcp_client.py  parallel_agent_workflow.py  test_langgraph_hitl.py  tools.py  utils.py  workflow.py
app/ai-platform-samplelib/src/ai_platform_samplelib/application/super_visor/model/: hitl_session.py  models.py
app/ai-platform-samplelib/src/ai_platform_samplelib/bff/test_client/: test_simple_client.py
app/ai-platform-samplelib/src/ai_platform_samplelib/event_bus/: __init__.py  redis_stream.py  task_status.py
app/ai-platform-samplelib/src/ai_platform_samplelib/oidc/: .env.example  README.md  auth.py  backend_server.py  client.py  config.yml  minimal_client.py  oauth_client_auth.py  server.py  settings.py
app/ai-platform-samplelib/test/application/autonomous/: test_task_service.py
app/ai-platform-samplelib/test/application/super_visor/: test_event_bus.py  test_hitl_core.py  test_redis_stream_event_bus.py
app/ai-platform-samplelib/test/event_bus/: test_redis_stream_settings.py
app/ai-platform-samplelib/test/litellm/: docker-compose.yml
app/mcp/ai-chat-util/: pyproject.toml  requirements.txt
app/mcp/ai-chat-util/src/ai_chat_util/cli/: __main__.py
app/mcp/ai-chat-util/src/ai_chat_util/core/: app.py
app/mcp/ai-chat-util/src/ai_chat_util/llm/: llm_config.py  llm_factory.py
app/mcp/ai-chat-util/src/ai_chat_util/mermaid_agent/: __main__.py
app/mcp/ai-chat-util/src/ai_chat_util/test/: simple_batch_chat_from_excel.py  simple_file_analysis.py  simple_pdf_analysis.py
app/mcp/ai-chat-util/src/file_util/api/: api_server.py
app/mcp/ai-chat-util/src/file_util/config/: file_util_config.py
app/mcp/ai-chat-util/src/file_util/core/: app.py
app/mcp/ai-chat-util/src/file_util/log/: log_settings.py
app/mcp/ai-chat-util/src/file_util/mcp/: mcp_server.py
app/mcp/ai-chat-util/src/file_util/model/: __init__.py
app/mcp/ai-chat-util/src/file_util/util/: excel_util.py  file_util.py  pdf_util.py  ppt_util.py  text_util.py  word_util.py  zip_util.py
app/mcp/denodo-vql-client/: pyproject.toml
app/mcp/denodo-vql-client/docs/: How to connect to Denodo from Python.txt
app/mcp/denodo-vql-client/src/denodo_vql_client/core/: denodo_client.py
app/mcp/denodo-vql-client/src/denodo_vql_client/model/: models.py
mcp/deonodo-log-util/: pyproject.toml
mcp/deonodo-log-util/src/denodo_log_util/: denodo_support_util_mcp.py
(+480 files in other folders)
