[build-system]
requires = ["setuptools>=62.6", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-platform-cline-executor"
version = "0.1.0"
authors = [
    { name = "knd3dayo", email = "knd3dayo@gmail.com" }
]
requires-python = ">=3.11,<=3.13"

dependencies = [
    "python-dotenv",
    "pydantic",
    "litellm",
    "pyyaml",
    "openai",
    "fastapi",
    "pytest",
    "langgraph",
    "langchain-openai",
    "docker",
    "python-multipart",
    "uvicorn",
    "python-on-whales",
    "tabulate"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
exec-api = "ai_platform_cline_executor.api.main:main"
exec-cli = "ai_platform_cline_executor.cli.main:app"

[tool.uv]
managed = true