[build-system]
requires = ["setuptools>=62.6", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-platform-sample-lib"
version = "0.1.0"
authors = [
    { name = "knd3dayo", email = "knd3dayo@gmail.com" }
]
requires-python = ">=3.11,<=3.13"

dependencies = [
    "python-dotenv",
    "pydantic",
    "litellm",
    "pyyaml",
    "openai",
    "fastapi",
    "fastmcp",
    "pytest",
    "langgraph",
    "langchain-openai",
    "python_on_whales",
    "tabulate",
    "aiosqlite",
    "langgraph-checkpoint",
    "langgraph-checkpoint-sqlite",
    "uvicorn",
    "docker",
    "redis>=5.0.0"
]

[project.optional-dependencies]
tui = [
    "textual>=0.70.0"
]

[tool.setuptools.packages.find]
where = ["src"]

