[build-system]
requires = ["setuptools>=62.6", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-platform-sample-lib"
version = "0.1.0"
authors = [
    { name = "knd3dayo", email = "knd3dayo@gmail.com" }
]
    requires-python = ">=3.11,<=3.13"

    dependencies = [
        "python-dotenv",
        "pydantic",
        "litellm",
        "pyyaml",
        "openai",
        "fastapi",
        "fastmcp",
        "pytest",
        "langgraph",
        "langchain-openai",
        "python_on_whales",
        "tabulate",
        "aiosqlite",
        "langgraph-checkpoint",
        "langgraph-checkpoint-sqlite",
        "textual>=0.70.0",
        "uvicorn",
        "docker",
        "redis>=5.0.0",
        "ai-governance-util @ git+https://github.com/knd3dayo/ai-governance-util",
        "ai-chat-util @ git+https://github.com/knd3dayo/ai-chat-util",
    ]

    [tool.setuptools.packages.find]
    where = ["src"]

