[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "denodo-log-util"
version = "0.1.0"
description = "Denodoログファイルの時間帯抽出ユーティリティ"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"python-dotenv",
	"pydantic",
	"fastmcp",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["denodo_log_util*"]
