[build-system]
requires = ["setuptools>=62.6", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_chat_util"
version = "0.1.10"
authors = [
    { name = "knd3dayo", email = "knd3dayo@gmail.com" }
]
requires-python = ">=3.11,<=3.13"

dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
ai-chat-util = "ai_chat_util.cli.__main__:cli_main"
