[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "denodo-vql-client"
version = "0.1.0"
description = "Denodoへのクエリー(VQL)を生成してデータおよびメタデータを返す"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"python-dotenv",
	"pydantic",
	"fastmcp",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
